--- a/ToDo_App/style.css
+++ b/ToDo_App/style.css
@@ -31,7 +31,7 @@ body{
     width: 85%;
 }
 
-.avatar-div img, .avatar-div p{
+.avatar-div img{
     margin-right: 15px;
 }
 
@@ -46,6 +46,7 @@ body{
     font-weight: 400;
     font-size: 16px;
 }
+
 
 .lg-text{
     font-size: clamp(0.9375rem, 0.7368rem + 0.9174vw, 1.5625rem);
@@ -97,6 +98,7 @@ input[type="checkbox"]:checked ~ .task-text {
     justify-content: center;
     font-size: 20px;
     cursor: pointer;
+    margin-left: auto;
 }
 
 .add-task-window{
