--- a/memory_cards/style.css
+++ b/memory_cards/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
+
+body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -8,14 +9,14 @@ body{
     color: rgb(6, 6, 65);
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
 }
 
-.grid-container{
+.grid-container {
     width: 90%;
     height: 90%;
     display: grid;
@@ -24,10 +25,10 @@ body{
     gap: 8px 15px;
 }
 
-.card{
+.card {
     background-color: rgb(79, 79, 252);
     border-radius: 10px;
-    background-image: url('starts.jpg');
+    background-image: url('stars.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -37,29 +38,23 @@ body{
     justify-content: center;
 }
 
-.hidden-icon{
-    background: red;
-    width: 100px;
-    height: 100px;
-    /*display: none;*/
-}
 
-h1{
+h1 {
     font-weight: 700;
     font-size: clamp(1.25rem, 0.9289rem + 1.4679vw, 2.25rem);
 }
 
-.attribution{
+.attribution {
     padding: 2em;
     font-size: 16px;
     font-weight: 400;
 }
 
-.attribution a{
+.attribution a {
     text-decoration: none;
     color: rgb(79, 79, 252);
 }
 
-.attribution a:hover{
+.attribution a:hover {
     text-decoration: underline;
 }
